--- a/index.html
+++ b/index.html
@@ -159,9 +159,14 @@
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+          <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호(미완성V1).pdf" >
+            <i class="fas fa-download mr-2"></i>
+            PORTFOLIO PDF Viewer
+          </a>
+          
+        <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호(미완성V1).pdf" download>
           <i class="fas fa-download mr-2"></i>
-          PDF Download
+          PORTFOLIO PDF Download
         </a>
       </div>
 
