191214 / 작품 설명 추가

--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0">Back-End & Web Developer</p>
-
     </div>
   </header>
 
@@ -359,7 +358,7 @@
             <i class="fas fa-times"></i>
           </span>
         </button>
-        <div class="modal-body text-center">
+        <div class="modal-body">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
@@ -375,8 +374,18 @@
                 </div>
                 <!-- Portfolio Modal - Image -->
                 <iframe width="725" height="441" src="https://www.youtube.com/embed/fW4CJT5AfN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <!-- Portfolio Modal - Text -->
-                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                  <hr>
+                  <p class="mb-5">
+                    작업 기간: 2019/10 ~ 2019/11(약 1달 반)<br>
+                    사용 언어 및 DB: JAVA, HTML/CSS3, JSP/SERVLET, Oracle<br>
+                    프레임워크 및 라이브러리: Spring Framework, jquery, Mybatis(ORM)<br>
+                    작업 툴: Eclpise, Vscode, git<br>
+                    작업 인원: 3명<br>
+                    작품 소개<br>
+                    SPRING Framework를 활용하여 
+                    젊은 청춘들의 편한 쉼터를 찾아주는 부동산 중개 사이트 ‘청춘多방’                    
+                   </p>
+                  
                   <button class="btn btn-primary" href="#" data-dismiss="modal">
                     <i class="fas fa-times fa-fw"></i>
                     Close Window
