191214 / 작품 설명 추가2

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cake.png" alt="">
+            <img class="img-fluid" src="img/chuga.png" alt="">
           </div>
         </div>
 
@@ -363,7 +363,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">청춘多방</h2>
+                <h2 class="portfolio-modal-title text-secondary text-center text-uppercase mb-0">청춘多방</h2>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -375,6 +375,7 @@
                 <!-- Portfolio Modal - Image -->
                 <iframe width="725" height="441" src="https://www.youtube.com/embed/fW4CJT5AfN8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   <hr>
+                  <b>
                   <p class="mb-5">
                     작업 기간: 2019/10 ~ 2019/11(약 1달 반)<br>
                     사용 언어 및 DB: JAVA, HTML/CSS3, JSP/SERVLET, Oracle<br>
@@ -385,7 +386,7 @@
                     SPRING Framework를 활용하여 
                     젊은 청춘들의 편한 쉼터를 찾아주는 부동산 중개 사이트 ‘청춘多방’                    
                    </p>
-                  
+                  </b>
                   <button class="btn btn-primary" href="#" data-dismiss="modal">
                     <i class="fas fa-times fa-fw"></i>
                     Close Window
@@ -422,7 +423,7 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/cake.png" alt="">
+                <img class="img-fluid rounded mb-5" src="img/chuga.png" alt="">
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
