--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <!-- Theme CSS -->
   <link href="css/freelancer.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/morphext.css">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <!-- <script src="http://code.jquery.com/jquery-latest.min.js"></script> -->
+  <script src="vendor/jquery/jquery.min.js"></script>
   <script src="js/morphext.min.js"></script>
 
 </head>
@@ -539,7 +540,7 @@ function closeOverlay() {
     </script>
   
   <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
+  
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Plugin JavaScript -->
