200103 / 포트폴리오 진행 사항 추가(비밀번호 초기화 수정)

--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
       <h2 style="text-align: center;">더 자세한 내용은 PDF 파일에서 확인 하실 수 있습니다.</h2>
       <!-- About Section Button -->
       <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호.pdf" >
+          <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호(200103).pdf" >
             <i class="fas fa-download mr-2"></i>
             PORTFOLIO PDF Viewer
           </a>
           
-        <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호.pdf" download>
+        <a class="btn btn-xl btn-outline-light" href="pdf/portfolio_이석호(200103).pdf" download>
           <i class="fas fa-download mr-2"></i>
           PORTFOLIO PDF Download
         </a>
